--- a/navBar.html
+++ b/navBar.html
@@ -1,8 +1,8 @@
 <div id="navBar">
     <a> BM </a>
     <div> 
-        <a href="#about" > work</a>
-        <a href="#work"> <span> about  </span> </a> 
+        <a href="#work" > work</a>
+        <a href="#about"> <span> about  </span> </a> 
     </div>
     
 </div>
