--- a/navBar.html
+++ b/navBar.html
@@ -1,5 +1,5 @@
 <div id="navBar">
-    <a> BM </a>
+    <a id="name"> <img src="Media/General Images/name.png"> </a>
     <div> 
         <a href="#work" > work</a>
         <a href="#about"> <span> about  </span> </a> 
