--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="spacer"></div>
 
 
-            <div>
+            <div class="showreelContainer">
                 <video autoplay muted loop id="showreel">
                     <source src="Media/showreel.mp4" type="video/mp4">
                 </video>
