--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </video>
             </div>
         
-            <div class="workTwoColumn" id="about">
-                <img src="Media/General Images/benji.jpg"/>
-                <div><h1> hello </h1></div>
+            <div id="about">
+                <div><h1> hello </h1>
+                </div>
                 
             </div>
 
