--- a/navBar.html
+++ b/navBar.html
@@ -1,4 +1,4 @@
-<div id="navBar">
+<div id="navBarLarge">
     <a id="name"> <img src="Media/General Images/name.png"> </a>
     <div> 
         <a href="#work" > work</a>
@@ -7,3 +7,7 @@
     
 </div>
 
+<div id="navBarSmall">
+        <a href="#work" > work</a>
+        <a href="#about"> <span> about  </span> </a> 
+</div>
