--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <video autoplay muted loop id="showreel">
                     <source src="Media/showreel.mp4" type="video/mp4">
                 </video>
+                <a href="#about" class="downArrow"></a>
             </div>
         
             <div id="about">
