--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <img src="Media/Circus-Image.png"/>
                             <div class="filmDescription">
                                 <h1>I Taught Him That</h1> 
-                                <h3> <i>Description of this that and the other</i></h3>
+                                <h3> <i>a documentary set in a small Danish family circus</i></h3>
                                 <a class="button" href="#section2"> play full video </a>
                             </div>
                         </div>
