Circus Image align

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="filmSection">
                     <div class="slides">
                         <div class="filmCover section" id="section1">
-                            <img src="Media/Circus-Image.png"/>
+                            <img style="object-position: left;" src="Media/Circus-Image.png"/>
                             <div class="filmDescription">
                                 <h1>I Taught Him That</h1> 
                                 <h3> <i>a documentary set in a small Danish family circus</i></h3>
