--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="filmSection">
                     <div class="slides">
                         <div class="filmCover section" id="section1">
-                            <img style="object-position: left;" src="Media/Circus-Image.png"/>
+                            <img class ="filmCoverImage" style="object-position: left;" src="Media/Circus-Image.png"/>
                             <div class="filmDescription">
                                 <h1>I Taught Him That</h1> 
                                 <h3> <i>a documentary set in a small Danish family circus</i></h3>
@@ -65,11 +65,13 @@
                 <div class="filmSection">
                     <div class="slides">
                         <div class="filmCover section" id="trustSection1">
-                            <img src="Media/trust.jpg"/>
+                            <img class ="filmCoverImage" src="Media/trust.jpg"/>
+                            <img src="Media/General Images/laurel white.png" class="award" />
                             <div class="filmDescription">
                                 <h1>Trust Your Senses</h1> 
                                 <h3> <i>Description of this that and the other</i></h3>
                                 <a class="button" href="#trustSection2"> play full video </a>
+                                
                             </div>
                         </div>
 
