Test showreel short

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="showreelContainer">
                 <video autoplay muted loop id="showreel">
-                    <source src="Media/(low res) showreel .mp4" type="video/mp4">
+                    <source src="Media/short cut_1.mp4" type="video/mp4">
                 </video>
                 <a href="#about" class="downArrow"></a>
             </div>
