Showreel full length + quality

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="showreelContainer">
                 <video autoplay muted loop playsinline id="showreel">
-                    <source src="Media/short cut.mp4" type="video/mp4">
+                    <source src="Media/showreel.mp4" type="video/mp4">
                 </video>
                 <a href="#about" class="downArrow"></a>
             </div>
