Snap to slide fix

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <div class="filmSliceContents">
                                 <h1> Title</h1>
                                 <h2> Description</h2>
-                                <a class="button" id="artButton" href="#tube1"> play full video </a>
+                                <a class="button" id="artButton" href="#slide1"> play full video </a>
                             </div>
                         </div>
                         <div class="tube" id="tube1"> </div>
