--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                 <h1>about </h1> 
                 <div>
                     
-                    <h2>I'm a self-shooting filmmaker based in London, UK. I specialise in research film projects and short documentary films, exploring human experience and connecting viewers to powerful stories. I provide professional story-driven content production, videography and editing services. 
+                    <h2>I'm a filmmaker based in London, UK. I specialise in research film projects and short documentary films, exploring human experience and connecting viewers to powerful stories. I provide professional story-driven content production, videography and editing services. 
+
+                        
                     </h2>
 
                 </div>
