--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <img src="Media/General Images/laurel white.png" class="award" />
                             <div class="filmDescription">
                                 <h1>Trust Your Senses</h1> 
-                                <h3> <i>This film explores the sensory world of a blind professional footballer. Through the non-visual engagement with the football pitch, this film seeks to engage the viewer in an immersive sensory experience, stripping away our reliance on vision and reconstructing the world through the less dominant senses. With the guidance of the film's protagonist Azeem, we are led through the processes and sounds of the beautiful game from the perspective of a blind player.</i></h3>
+                                <h3> <i>An exploration of the sensory world of a blind professional footballer: stripping away our reliance on vision and reconstructing the world through the less dominant senses. With the guidance of the film's protagonist Azeem, we are led through the processes and sounds of the beautiful game.</i></h3>
                                 <a class="button" href="#trustSection2"> Watch </a>
                                 
                             </div>
