removing gross italic font tags

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <img class ="filmCoverImage" id="circusCoverImage" src="Media/Circus-Image.png"/>
                             <div class="filmDescription">
                                 <h1>I Taught Him That</h1> 
-                                <h3> <i>Set in a family-run circus in the heart of Copenhagen. When family and business are so intimately intertwined, how do three generations of showmen navigate their relationships when confronted by a potential threat to the future of the circus? </i></h3>
+                                <h3> Set in a family-run circus in the heart of Copenhagen. When family and business are so intimately intertwined, how do three generations of showmen navigate their relationships when confronted by a potential threat to the future of the circus?</h3>
                                 <a class="button" href="#section2"> Watch </a>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             <img src="Media/General Images/laurel white.png" class="award" />
                             <div class="filmDescription">
                                 <h1>Trust Your Senses</h1> 
-                                <h3> <i>An exploration of the sensory world of a blind professional footballer: stripping away our reliance on vision and reconstructing the world through the less dominant senses. With the guidance of the film's protagonist Azeem, we are led through the processes and sounds of the beautiful game.</i></h3>
+                                <h3> An exploration of the sensory world of a blind professional footballer: stripping away our reliance on vision and reconstructing the world through the less dominant senses. With the guidance of the film's protagonist Azeem, we are led through the processes and sounds of the beautiful game.</h3>
                                 <a class="button" href="#trustSection2"> Watch </a>
                                 
                             </div>
