--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                 <h1>about </h1> 
                 <div>
                     
-                    <h2>I'm a filmmaker based in London, UK. I specialise in research film projects and short documentary films, exploring human experience and connecting viewers to powerful stories. I provide professional story-driven content production, videography and editing services. 
+                    <h2>I'm a filmmaker based in London, UK. I specialise in research film projects and short documentary films, exploring human experience and connecting viewers to powerful stories. I aim to get to the heart of an issue or story by spending time and care in the field, telling personal stories as a collaborative process. 
 
+                    I provide professional story-driven content production, videography and editing services. For all inquiries, please get in contact below.
                     </h2>
 
                 </div>
